--- a/B.O.P.E/gradle.properties
+++ b/B.O.P.E/gradle.properties
@@ -1,6 +1,6 @@
 # Created by Rina.
-org.gradle.jvmargs = Xmx3g
+org.gradle.jvmargs =-Xmx3G
 client_name        = BOPE
 client_version     = b0.1
 client_group       = rina.turok.bope
-client_base_name   = rina-bope
+client_base_name   = bope
