New settings have make with a problem.
I forget commit, this is gay thing, but well.
Now I need update in the structure buttons.
For it I need update in json and gson.

--- a/B.O.P.E/build.gradle
+++ b/B.O.P.E/build.gradle
@@ -8,6 +8,7 @@
 // I really liked how it works, thanks for.
 //
 // Somes dependcy is require by zero.alpine.
+// Somes utils was refereced like KAMI.
 
 buildscript {
 	repositories {
