Im a dumb in english :cry:

--- a/B.O.P.E/build.gradle
+++ b/B.O.P.E/build.gradle
@@ -1,6 +1,6 @@
 //
-// This code have protect with MIT, you can copy for sell, all rights reserver to me!
-// All Rigths for the dependcies too.
+// This code have protect with MIT, you can't copy for sell, all rights reserver to me!
+// All Rigths for the depedencies too.
 // Discord. // For IRC.
 // Alpine.  // For event manager.
 //
