--- a/B.O.P.E/build.gradle
+++ b/B.O.P.E/build.gradle
@@ -70,11 +70,12 @@ repositories {
 }
 
 dependencies {
-	compile "com.github.ZeroMemes:Alpine:1.5"
+	compile "com.github.ZeroMemes:Alpine:1.5" // Zero ALpine.
+	compile "club.minnced:java-discord-rpc:v2.0.1" // Discord rpc.
 
-	compile group : "net.jodah", name : "typetools",   version: "0.5.0"
+	compile group : "net.jodah", name : "typetools",   version: "0.5.0" // TypeTools.
 
-	compile("org.spongepowered:mixin:0.7.4-SNAPSHOT") {
+	compile("org.spongepowered:mixin:0.7.4-SNAPSHOT") { // Somes others.
 		exclude module: "launchwrapper"
 		exclude module: "commons-io"
 		exclude module: "guava"
@@ -84,6 +85,7 @@ dependencies {
 
 shadowJar {
 	dependencies {
+		include(dependency("club.minnced:java-discord-rpc"))
 		include(dependency("com.github.ZeroMemes:Alpine"))
 		include(dependency("org.javassist:javassist"))
 		include(dependency("org.spongepowered:mixin"))
