--- a/B.O.P.E/build.gradle
+++ b/B.O.P.E/build.gradle
@@ -16,11 +16,11 @@ buildscript {
 
 		maven {
 			name = "SpongePowered"
-			url  = "http://repo.spongepowered.org/maven"
+			url  = "https://repo.spongepowered.org/maven"
 		}
 
 		maven {
-			url = "http://files.minecraftforge.net/maven"
+			url = "https://files.minecraftforge.net/maven"
 		}
 	}
 
@@ -52,12 +52,12 @@ minecraft {
 repositories {
 	maven {
 		name = "spongepowered-repo"
-		url  = "http://repo.spongepowered.org/maven/"
+		url  = "https://repo.spongepowered.org/maven/"
 	}
 
 	maven {
 		name = "swt-repo"
-		url  = "http://maven-eclipse.github.io/maven"
+		url  = "https://maven-eclipse.github.io/maven"
 	}
 
 	maven {
